[gd_scene load_steps=34 format=3 uid="uid://cs8mxbjjxk1h3"]

[ext_resource type="Texture2D" uid="uid://dan3xuw06qi5s" path="res://Enemies/FlyingEye/Flying-Eye-Sprite-Sheet.png" id="1_nul23"]
[ext_resource type="Script" path="res://Enemies/FlyingEye/FlyingEye.gd" id="1_osiu1"]
[ext_resource type="Script" path="res://Enemies/Base/StateMachine/EnemyStateMachine.gd" id="3_kpwmy"]
[ext_resource type="Script" path="res://Enemies/FlyingEye/States/FlyingEyeFollowState.gd" id="4_eprum"]
[ext_resource type="Script" path="res://Enemies/FlyingEye/States/FlyingEyeAttackState.gd" id="5_hi02m"]
[ext_resource type="Script" path="res://Enemies/FlyingEye/States/FlyingEyeFlankState.gd" id="5_lt3hy"]
[ext_resource type="Script" path="res://Enemies/FlyingEye/States/FlyingEyeStunnedState.gd" id="7_2puiu"]
[ext_resource type="Script" path="res://Enemies/FlyingEye/States/FlyingEyeSlainState.gd" id="8_wtswa"]
[ext_resource type="Script" path="res://Enemies/FlyingEye/FlyingEyeTakeDamage.gd" id="9_0f7da"]
[ext_resource type="AudioStream" uid="uid://c45hdi8al1v64" path="res://SFX/monster 2 hit var1 [2024-04-22 172225].aif.wav" id="10_nycxa"]
[ext_resource type="AudioStream" uid="uid://du33m32twflfq" path="res://SFX/monster 2 hit var2 [2024-04-22 172225].aif.wav" id="11_roiuf"]
[ext_resource type="AudioStream" uid="uid://cqthnndr7ehhf" path="res://SFX/monster 2 hit var3 [2024-04-22 172228].aif.wav" id="12_fi4ad"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ye4ix"]
size = Vector2(41, 31)

[sub_resource type="Animation" id="Animation_o67j0"]
resource_name = "attack"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_7fpdq"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_2cqkv"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_3wvkh"]
resource_name = "take_damage"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wdqqu"]
_data = {
"attack": SubResource("Animation_o67j0"),
"death": SubResource("Animation_7fpdq"),
"idle": SubResource("Animation_2cqkv"),
"take_damage": SubResource("Animation_3wvkh")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8poik"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4n00x"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hwbct"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k6jgb"]
animation = &"take_damage"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ndbyi"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qwtsr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u7bb0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_brq14"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_py42s"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rc3v4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rk75s"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4kih3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_56i0s"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6cvl2"]
states/End/position = Vector2(782, 171)
states/Start/position = Vector2(507, 80)
states/attack/node = SubResource("AnimationNodeAnimation_8poik")
states/attack/position = Vector2(398, 274)
states/death/node = SubResource("AnimationNodeAnimation_4n00x")
states/death/position = Vector2(642, 171)
states/idle/node = SubResource("AnimationNodeAnimation_hwbct")
states/idle/position = Vector2(507, 171)
states/take_damage/node = SubResource("AnimationNodeAnimation_k6jgb")
states/take_damage/position = Vector2(642, 274)
transitions = ["idle", "death", SubResource("AnimationNodeStateMachineTransition_ndbyi"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_qwtsr"), "idle", "take_damage", SubResource("AnimationNodeStateMachineTransition_u7bb0"), "attack", "take_damage", SubResource("AnimationNodeStateMachineTransition_brq14"), "take_damage", "idle", SubResource("AnimationNodeStateMachineTransition_py42s"), "attack", "death", SubResource("AnimationNodeStateMachineTransition_rc3v4"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_rk75s"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_4kih3"), "take_damage", "death", SubResource("AnimationNodeStateMachineTransition_56i0s")]
graph_offset = Vector2(171, 66)

[sub_resource type="Curve" id="Curve_thqqt"]
_data = [Vector2(0, 0.995117), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="FlyingEye" type="Area2D"]
script = ExtResource("1_osiu1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, -6.5)
shape = SubResource("RectangleShape2D_ye4ix")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-5, -8)
texture = ExtResource("1_nul23")
hframes = 8
vframes = 4
frame = 8
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wdqqu")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_6cvl2")
anim_player = NodePath("../AnimationPlayer")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 60
one_shot = true
speed_scale = 4.0
explosiveness = 1.0
randomness = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 25.0
initial_velocity_max = 50.0
scale_amount_min = 2.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_thqqt")

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="EnemyStateMachine" type="Node" parent="." node_paths=PackedStringArray("parent_enemy", "initial_state")]
script = ExtResource("3_kpwmy")
parent_enemy = NodePath("..")
initial_state = NodePath("FlyingEyeFollowState")

[node name="FlyingEyeFollowState" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("flank_state", "stunned_state", "enemy_state_machine")]
script = ExtResource("4_eprum")
flank_state = NodePath("../FlyingEyeFlankState")
stunned_state = NodePath("../FlyingEyeStunnedState")
enemy_state_machine = NodePath("..")

[node name="FlyingEyeFlankState" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("attack_state", "follow_state", "stunned_state", "attack_cooldown_timer", "enemy_state_machine")]
script = ExtResource("5_lt3hy")
attack_state = NodePath("../FlyingEyeAttackState")
follow_state = NodePath("../FlyingEyeFollowState")
stunned_state = NodePath("../FlyingEyeStunnedState")
attack_cooldown_timer = NodePath("../../AttackCooldownTimer")
enemy_state_machine = NodePath("..")

[node name="FlyingEyeAttackState" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("follow_state", "stunned_state", "enemy_state_machine")]
script = ExtResource("5_hi02m")
follow_state = NodePath("../FlyingEyeFollowState")
stunned_state = NodePath("../FlyingEyeStunnedState")
enemy_state_machine = NodePath("..")

[node name="FlyingEyeStunnedState" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("follow_state", "slain_state", "enemy_state_machine")]
script = ExtResource("7_2puiu")
follow_state = NodePath("../FlyingEyeFollowState")
slain_state = NodePath("../FlyingEyeSlainState")
enemy_state_machine = NodePath("..")

[node name="FlyingEyeSlainState" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("enemy_state_machine")]
script = ExtResource("8_wtswa")
enemy_state_machine = NodePath("..")

[node name="TakeDamage" type="AudioStreamPlayer2D" parent="."]
volume_db = -20.0
script = ExtResource("9_0f7da")
sound_1 = ExtResource("10_nycxa")
sound_2 = ExtResource("11_roiuf")
sound_3 = ExtResource("12_fi4ad")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="state_changed" from="EnemyStateMachine" to="." method="_on_enemy_state_machine_state_changed"]
